sites/all/themes/craving_boston/cb_style.css
/*  This is the Craving Boston custom style sheet */

/* Basic settings */
body {
  font-family: "CooperHewitt", Helvetica, Arial,sans-serif;
  background-image: url(images/bg_greyzz.png);
  color: #555;
}
body.page-admin, body.page-node-add {
  background-image: none;
}
h1,h2,h3,h4,h5,h6 {
  font-weight: bold;
}
p {
  font-size: 18px;
  line-height: 1.3;
  margin-bottom: 10px;
}
a, a:visited {
  color: #b52e18;
}
a:hover {
  color: #78201F;
}
a.print-button, a.print-button:visited {
  color: #999;
  font-size: 18px;
  padding-right: 20px;
}
ul {
  list-style-type: square;
}
.links li a.addtoany_share_save {
  background-color: transparent;
}

blockquote {
  font-weight: normal;
  color: #444;
}
blockquote::before {
  content: none;
}
.pmp-article blockquote {
  padding-left: 0;
}
/* Utility class to remove padding from column */
.no-padding {
  padding-left: 0 !important;
  padding-right: 0 !important;
}

/* More specific settings */
.a2a_kit {
  margin-right: 12px;
}
.article {
  position: relative;
}
.attachment .article {
  margin-left: 5px;
}
.article .image {
  width: 100%;
}
.bio {
  border-top: solid 1px #999;
  padding: 10px 0;
}
.bio .name {
  font-size: 1.2em;
  font-weight: bold;
  margin-bottom: 7px;
}
.bio .bio-text p {
  font-size: 15px;
}
/*
.block-dfp iframe {
  width: 100%;
}
.block-dfp iframe img {
  width: 100%;
}
 */
.dfp-tag-wrapper {
  text-align: center;
}
#cb-bottom-links {
  background-color: #9E1D21;
  border-top: 5px solid #8c1418;
}
#cb-bottom-links ul.menu {
  list-style: none;
  margin-left: 0;
}
#cb-bottom-links ul li a, #cb-bottom-links ul li a:visited {
  color: white;
  font-size: 12px;
  font-weight: bold;
  text-transform: uppercase;
}
#cb-bottom-links ul li, #cb-bottom-links ul li.leaf {
  list-style-type: none;
  list-style-image: none;
}
.footer-block img {
  display: inline-block;
  margin-top: 50px;
}
.footer-block .block h2 {
  color: #ddd;
  padding: 0;
}
#colophon {
  text-align: center;
}
/* Food & Wine Festival */
.food-and-wine-festival #site-banner {
  width: 100%;
  margin: 10px 0 50px;
}

.food-and-wine-festival .publication_date {
  display: none;
}

.food-and-wine-festival.page-node h1.page-title,
.food-and-wine-festival h1.page-title,
.food-and-wine-festival.page-node h2,
.food-and-wine-festival h2
{
  color: #454545; /* dark gray */
  font-size: 3rem;
}
.food-and-wine-festival.page-node h2,
.food-and-wine-festival h2 {
  font-size: 2rem;
}
.food-and-wine-festival #sidebar .block > h2 {
  color: black;
}

.food-and-wine-festival a, .food-and-wine-festival a:visited {
  color: #3b114b;
  padding: 1px 3px;
  border-radius: 5px;
  cursor: pointer;
}
.food-and-wine-festival table {
  font-size: 1.75rem;
}

.food-and-wine-festival ul.menu li {
  padding-bottom: 7px;
}

.food-and-wine-festival .content > ul.menu > li {
  font-weight: bold;
  text-transform: uppercase;
}
.food-and-wine-festival li.expanded > ul.menu > li {
  font-weight: normal;
  text-transform: none;
}

.food-and-wine-festival a:hover {
  font-style: italic;
  background-color: #f59729;
  text-decoration: none;
}
.food-and-wine-festival #site-banner a:hover {
  background-color: transparent;
}
.food-and-wine-festival .menu .nolink {
  color: black;
  font-weight: bold;
}
.food-and-wine-festival .field {
  margin: 20px 0;
}

.food-and-wine-festival .field-name-event-calendar-date {
  font-weight: bold;
  color: #8b1946;
}


#block-menu-menu-food-wine-festival,
.food-and-wine-festival .block.signup {
  border-radius: 10px;
  border: solid 3px #8b1946;
  background-color: #eee;
  padding: 1rem 1.5rem;
}
#block-menu-menu-food-wine-festival ul, #block-menu-menu-food-wine-festival li, #block-menu-menu-food-wine-festival li.leaf {
  list-style-type: none;
  list-style-image: none;
  font-size: 18px;
  line-height: 1.4;
}
h2, h3 {
  color: #5C9E4C;
}

/* All posts page */
.row.post {
  margin: 10px 0;
  border-bottom: solid 1px #ccc;
}
.row.post img {
  border-radius: 2px;
  margin-bottom: 10px
}
.row.post h2 {
  margin-top: 0;
  font-size: 18px;
}
.row.post .subhead, .row.post .subhead p {
  font-size: 15px;
}
.row.post .tags a {
  display: inline-block;
  margin-bottom: 2px;
  background: #ed564b none repeat scroll 0 0;
  border-radius: 2px;
  color: #fff;
  margin-bottom: 5px;
  margin-right: 5px;
  padding: 2px 6px;
}
/* Link to all posts page */
.view-footer {
  text-align: center;
}
a.cb-button {
  display: inline-block;
  padding: 5px 14px;
  background-color: #fff;
  border: 1px solid #ddd;
  border-radius: 15px;
  margin-top: 20px;
}
.item-list z.pager {
  margin-top: 20px;
}

.block.info, .block.signup {
  padding: 20px;
  background-color: #ffeedd;  /* highlight-background */
  color: #333;
}
#sidebar .block.info h2 {
  margin-top: 0;
}
#block-menu-menu-footer-menu ul {
  list-style: none;
  padding: 0;
  margin: 0;
}
#block-menu-menu-footer-menu ul li {
  list-style-type: none;
  list-style-image: none;
}
.btn.sign-up {
  margin: 0 0 7px 5px;
  font-weight: bold;
  font-size: 0.7em;
}

/* Reset max container width */
.container {
  max-width: 994px;
}

.content .unpublished {
  background-color: #fee;
}

/* faqs */
.faq .well {
  background-color: #ffeedd;
  border: 2px solid #ffaaaa;
}
.faq .question {
  font-size: 1.2em;
  font-style: italic;
  margin-bottom: 10px;
}
.faq .answer p {
  font-size: 1.1em;
}

/* flexslider */
.flex-caption {
  background-color: rgba(255,255,255,0.8);
  left: 0;
  top: inherit;
  bottom: 5%;
  color: #555;
  margin-left: 0;
  padding: 10px;
  text-align: left;
  width: 90%;
}
.flex-control-thumbs li {
  width: 20%;
}
.flex-direction-nav .flex-prev {
  left: 12px;
}
.flex-direction-nav .flex-next {
  right: 27px;
}
.flex-direction-nav a {
  top: 30%;
  background-image: url(images/cb-flexslider-nav.png);
}

/* Events */
.view-event-list h2 {
  font-size: 22px;
  color: #999;
}
.view-event-list .calendar-date {
  font-weight: bold;
  font-size: 14px;
  margin-bottom: 10px;
}
/* ... */

